--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
